# moral-choice-and-collective-reasoning

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
cli/: analyze_results.py  run_experiment1.py  run_experiment2.py  run_experiment3.py  run_experiment4.py
data/raw/exp1_results_20251117_171927/: exp1_20251117_165639_claude-sonnet-4-5-20250929.json  exp1_20251117_170253_gpt-5-nano-2025-08-07.json  exp1_20251117_171213_gemini-2.5-flash.json
data/raw/exp1_results_20251117_175826/: exp1_20251117_175826_claude-haiku-4-5-20251001.json  exp1_20251117_175826_gemini-2.5-flash-lite.json  exp1_20251117_175826_gpt-5-nano-2025-08-07.json
data/raw/exp2/: exp2_20251120_104904_claude-haiku-4-5-20251001_vs_gemini-2.5-flash-lite.json  exp2_20251120_104904_claude-haiku-4-5-20251001_vs_gpt-5-nano-2025-08-07.json  exp2_20251120_104904_gemini-2.5-flash-lite_vs_claude-haiku-4-5-20251001.json  exp2_20251120_104904_gpt-5-nano-2025-08-07_vs_claude-haiku-4-5-20251001.json  exp2_20251120_104904_gpt-5-nano-2025-08-07_vs_gemini-2.5-flash-lite.json  exp2_20251120_105839_claude-haiku-4-5-20251001_vs_gemini-2.5-flash-lite.json  exp2_20251120_105839_claude-haiku-4-5-20251001_vs_gpt-5-nano-2025-08-07.json  exp2_20251120_105839_gemini-2.5-flash-lite_vs_claude-haiku-4-5-20251001.json  exp2_20251120_105839_gemini-2.5-flash-lite_vs_gpt-5-nano-2025-08-07.json  (+20 more)
notebooks/: experiment1_individual_choice.ipynb
src/: analyze.py  config.py  llm_client.py  test_models.py
src/experiments/: analyze_experiment1.py  analyze_experiment2.py  base_experiment.py  experiment1_individual_choice.py  experiment2_multi_agent_choice.py  experiment2_multi_agent_negotiation.py  experiment2_researcher_choice.py  experiment3_collaboration.py  experiment4_value_negotiation.py
